infra/web/service-nas.yaml
apiVersion: v1
kind: Service
metadata:
  name: infra-nas
  namespace: infra
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - port: 9999
    protocol: TCP
    targetPort: 9999
