infra/web/httproute-local.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: infra-local
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: infra
  hostnames:
  - nas.home
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: infra-nas
      port: 9999
      weight: 1
    filters:
    - type: ExtensionRef
      extensionRef:
        group: traefik.io
        kind: Middleware
        name: local-only
